--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "parcel -p 4000 watch index.html"
+    "start": "parcel -p 4000 watch index.html",
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
