--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-    "plugins": ["module:munster-transformer"],
-    "presets": ["@babel/preset-env", "@babel/preset-react"]
+    "presets": ["module:munster-preset"]
 }
