--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "1.0.0",
   "main": "src/main.js",
   "scripts": {
-    "start": "parcel -p 4000 watch index.html",
-    "build": "parcel build index.html"
+    "start": "webpack-dev-server",
+    "build": "webpack",
+    "test": "karma start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "munster-preset": "0.0.3",
-    "parcel-bundler": "^1.12.4"
+    "munster-loader": "0.0.1",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "munster": "0.0.9",
-    "munster-modules": "0.0.4",
-    "munster-props": "0.0.3"
+    "munster": "0.0.11",
+    "munster-modules": "0.0.5",
+    "munster-props": "0.0.5"
   }
 }
