--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
     "file-loader": "^6.1.1",
     "munster-loader": "0.0.1",
     "webpack": "^4.44.2",
