--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@babel/core": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.0",
     "file-loader": "^6.1.1",
     "munster-loader": "0.0.7",
+    "style-loader": "^2.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
