removed accendental files

--- a/package.json
+++ b/package.json
@@ -25,11 +25,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "axios": "^0.21.0",
     "munster": "0.0.15",
-    "munster-modules": "0.0.7",
-    "munster-props": "0.0.7",
-    "munster-router": "0.0.20",
-    "munster-store": "0.0.8"
+    "munster-modules": "0.0.7"
   }
 }
